# stm32-template

./: Cargo.toml  Embed.toml  README.md
.cargo/: config
src/: main.rs
